Fixed double separators lines on mobile edit

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
@@ -47,6 +47,9 @@
       border: 0;
       border-radius: .25em;
     } */
+    .mbsc-control-w:after {
+      border-top: 0; // fix for double control separators in edit.
+    }
     &.mbsc-switch {
       background-color: white;
       //margin-top: 0;
